<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="201dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="6dp">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">


<ImageView
    android:id="@+id/foodImage"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:contentDescription="@string/foto_makanan"
    android:scaleType="centerCrop"
android:src="@drawable/timun" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp">
<TextView
    android:id="@+id/foodName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nama_makanan"
    android:fontFamily="@font/roboto_bold"
    android:textColor="@color/hijautua"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_marginTop="5dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"/>

<TextView
    android:id="@+id/foodCarb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/karbohidrat"
    android:textSize="14sp"
    android:textColor="@color/hijautua"
    android:fontFamily="@font/roboto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/foodFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serat"
            android:textSize="14sp"
            android:textColor="@color/hijautua"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</LinearLayout>
    </androidx.cardview.widget.CardView>
