<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_page"
    tools:context=".WelcomeActivity">


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_marginStart="80dp"
    android:background="@color/white">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_apk"
        android:id="@+id/logo_welcome"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Welcome_text1"
        android:textColor="@color/hijautext"
        android:textSize="30sp"
        android:id="@+id/txt1"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Welcome_text_1"
        android:textColor="@color/hijautext"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/Welcome_text_2"
        android:textColor="@color/hijautext"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/w_btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:width="280dp"
        android:background="@drawable/button_shape"
        android:text="Masuk"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/w_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/w_btn_login"
        android:text="Daftar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:width="280dp"
        android:textColor="@color/white"
        />

</RelativeLayout>



</RelativeLayout>